# Checkers-Qt

./: README.md
Cherckers-Qt/: CMakeLists.txt  JeuDame_en_US.ts  JeuDame_fr_FR.ts  box.cpp  box.h  fenetre.cpp  fenetre.h  main.cpp  pion.cpp  pion.h  ressources.qrc  zoneplateau.cpp  zoneplateau.h
Cherckers-Qt/annexes/: fin_de_jeu.save  future_dame.save  saveee.save  test.save
